# rostest

./: Navigation Stack解説・調整手順書.docx  README.md  frames.gv
C205_desk/: model.config
android/: CMakeLists.txt  package.xml
android/src/: Android_server.cpp  test_client.cpp
irvs_ros_tutorials/: CMakeLists.txt  package.xml
irvs_ros_tutorials/launch/: union.launch
irvs_ros_tutorials/src/: ojigi_publisher.cpp  sensor_subscriber.cpp  subscriber_face2.cpp  track_face_publisher.cpp
my_robo_2dnav/: CMakeLists.txt  base_local_planner_params.yaml  costmap_common_params.yaml  costmap_common_params_real.yaml  local_costmap_params.yaml  move_base_params.yaml  package.xml
my_robo_2dnav/launch/: move_base.launch  move_base_B205.launch  move_base_c205.launch  move_base_c205_sort.launch  move_base_food.launch  move_base_real.launch
my_robo_2dnav/params/: amcl_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
my_robo_control/: CMakeLists.txt  package.xml
my_robo_control/config/: controller.yaml  controller_BACKUP_2800.yaml  controller_REMOTE_2723.yaml
my_robo_control/include/my_robo_control/: my_robo_hw.h
my_robo_control/launch/: control_base.launch  control_real.launch  control_sim.launch  my_robo_control.launch  run.launch
my_robo_control/src/: head_control.cpp  head_controller.cpp  my_robo_control.cpp  my_robo_head_control.cpp  my_robo_hw.cpp
my_robo_description/: CMakeLists.txt  my_robo.urdf  package.xml  urdf.rviz
my_robo_description/config/: controller.yaml
my_robo_description/launch/: C205.launch  C205_sort.launch  c205.launch  control.launch  display.launch  gazebo.launch  spawn_model.launch  spawn_model_b205.launch  spawn_model_food.launch  spawn_world.launch  spawn_world_b205.launch  spawn_world_food.launch  willow.launch
my_robo_description/src/: main.cpp
my_robo_description/world/: B205  B205_add_desk  C205.world  C205_sort.world  C205_strict.world  food_space_ver3  willow_garage.world
my_robo_description/world/B205_except_table_/: model.config  model.sdf
my_robo_description/world/B205_wall_only/: model.config  model.sdf
my_robo_description/world/C205/: model.config  model.sdf
my_robo_description/world/C205_desk/: model.sdf
my_robo_description/world/C205_strict/: model.config  model.sdf
my_robo_description/world/Untitled/: model.sdf
my_robo_description/world/WALL/: model.config  model.sdf
my_robo_description/world/chair/: model.sdf
my_robo_description/world/hood_table_Brown/: model.config  model.sdf
my_robo_description/world/hood_table_White/: model.config  model.sdf
my_robo_description/world/hood_table_long/: model.config  model.sdf
my_robo_description/world/hood_table_mini/: model.config  model.sdf
my_robo_description/world/hood_table_silber/: model.config  model.sdf
my_robo_description/world/hoodcourt_not_pillar/: model.config  model.sdf
my_robo_description/world/hoodcourt_pillar/: model.config  model.sdf
my_robo_description/world/kakoi_hasira/: model.config  model.sdf
my_robo_description/world/left_back_wall/: model.config  model.sdf
my_robo_description/world/plojecter/: model.config  model.sdf
my_robo_description/world/white_table/: model.config  model.sdf
pimouse_vision_control/: CMakeLists.txt  face_publisher.py  face_to_face3.py  package.xml  test_to_face.py
pimouse_vision_control/launch/: copy2.launch  vision_control.launch
pimouse_vision_control/msg/: test1.msg  test2.msg
robot_launcher/: CMakeLists.txt  package.xml
robot_launcher/launch/: b205_demo.launch  kinki_demo.launch  kyoto_demo.launch  laser.launch  navigation_real.launch  navigation_real_food.launch  navigation_sim.launch  setup_face_tracking.launch  setup_ojigi.launch  setup_okada.launch  setup_robot.launch  setup_robot.launch~  ypspur_adjuster.launch  ypspur_ros.launch
robot_launcher/params/: my_laser_config.yaml
robot_launcher/scripts/: ds4drv.sh  jtalk.py  talk.py  ypspur_coordinator.sh
robot_launcher/ypspur_params/: yp-h28ki.param  yp-h29ki-3600-1 (コピー).param  yp-h29ki-3600-1 (別のコピー).param  yp-h29ki-3600-1.param
simple_goal_generator/: CMakeLists.txt  package.xml
simple_goal_generator/launch/: goal_generator.launch
simple_goal_generator/src/: detect_human.cpp  monitor_battery.cpp  simple_goal_generator.cpp
udev/: 91-my_robot.rules  README.md  copy.sh
